hphp/hack/test/typecheck/attributes/enum_attribute.php.rust_elab.exp
File "enum_attribute.php", line 4, characters 3-14:
Unbound name: `DoesNotExist` (an object type) (Naming[2049])
File "enum_attribute.php", line 4, characters 3-14:
Unrecognized user attribute: `DoesNotExist` does not have a class. Please declare a class for the attribute. (Naming[2049])
File "enum_attribute.php", line 5, characters 6-6:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
